app/assets/stylesheets/pages/_home.scss
// Specific CSS for your home-page

form, table {
  margin: 10px auto;
}

td {
  padding: 10px 10px;
}

h2 {
  margin-top: 0;
}

body {
  background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.3)), image-url('bg1.jpeg');
  background-repeat: no-repeat;
  background-size: cover;
  height: 100vh;
}

.main-content {
  margin: 10px auto 0 auto;
  background-color: transparent;
  border-radius: 5;
  padding: 20px;
  text-align: center;
  h2 {
    color: white;
  }
}


@media only screen and (max-width: 599px) {
  td {
    padding: 4px;
  }

  .main-content {
    margin: 40px auto;
    padding-right: 0px;
    padding-left: 0px;
  }

  /*I know I shouldn't override Bootstrap classes, but hey, at least it works without major problems.*/
  .container {
    padding-right: 0px;
    padding-left: 0px;
  }
}

@media only screen and (max-width: 359px) {
  .cb-container, .checkmark {
    height: 90px;
    width: 90px;
  }

  .main-content {
    margin: 10px auto;
  }

}

.submit-btn {
  background-color: #F6546A;
  padding: 18px;
  border-radius: 5px;
  width: 315px;
  border: none;
  color: white;
}

